--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
         <div id="footer">
             v.1.0 - Esta es la primerísima versión - Se randomizan 11 caritas, con 4 cuerpos y 4 pieses! <br>
-            Gracias por mirar - (◕‿◕)♡
+            Gracias por mirar - (◕‿◕)♡♡
         </div>
     </div>
     <script>
