--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             font-size: 16px;
             transition: 0.5s all;
             width: 50%;
+            min-width: 100px;
         }
 
         button:hover {
@@ -176,9 +177,16 @@
         <div id="footer">
             v.1.0 - Esta es la primerísima versión - Se randomizan 11 caritas, con 4
             cuerpos y 4 pieses! <br />
-            Gracias por mirar - (◕‿◕)♡♡♡
+            Gracias por mirar - (◕&#x203f;◕)♡ ..
         </div>
     </div>
+
+
+    <!--&#x203f; >>> ‿
+        &#x2e1d; >>> ⸝
+
+    -->
+
     <script>
         const { createApp } = Vue;
 
@@ -199,9 +207,10 @@
                         "&nbsp&nbsp&nbsp.©©©.</br>&nbsp&nbsp/&nbsp&nbsp&nbsp&nbsp:</br>&nbsp(&nbsp˘̩╭╮˘̩&nbsp)</br>&nbsp&nbsp&#92;&nbsp&nbsp&nbsp&nbsp/ .</br>", //triste - 7
                         "&nbsp&nbsp&nbsp....</br>&nbsp&nbsp/&nbsp&nbsp&nbsp&nbsp:</br>&nbsp(&nbsp▀̿Ĺ̯▀̿ ̿&nbsp)</br>&nbsp&nbsp|&nbsp&nbsp&nbsp&nbsp| .</br>", // serio - 8
                         "&nbsp&nbsp&nbsp§§§§.</br>&nbsp§§&nbsp&nbsp&nbsp&nbsp&#92;</br>§§&nbsp⌒◡⌒|</br>§§§&nbsp&nbsp&nbsp&nbsp/</br>", //feliz - 9
-                        "&nbsp&nbsp&nbsp;»»»»,</br>&nbsp;&nbsp;«&nbsp;.&nbsp;   .</br>&nbsp(&nbsp;&nbsp;⸝⸝⸝⸝3⸝⸝⸝)  </br>&nbsp&nbsp&#92;&nbsp&nbsp&nbsp&nbsp/ <br>", //chuik - 10
+                        //"&nbsp&nbsp&nbsp;»»»»,</br>&nbsp;&nbsp;«&nbsp;.&nbsp;   .</br>&nbsp(&nbsp;&nbsp;⸝⸝⸝⸝3⸝⸝⸝)  </br>&nbsp&nbsp&#92;&nbsp&nbsp&nbsp&nbsp/ <br>", //chuik - 10
+                        "&nbsp&nbsp&nbsp;»»»»,</br>&nbsp;&nbsp;«&nbsp;.&nbsp;   .</br>&nbsp(&nbsp;&nbsp;&#x2e1d;&#x2e1d;&#x2e1d;&#x2e1d;3&#x2e1d;&#x2e1d;&#x2e1d;)  </br>&nbsp&nbsp&#92;&nbsp&nbsp&nbsp&nbsp/ <br>", //chuik - 10
                         "&nbsp&nbsp.≡≡≡≡,</br>.≡≡&nbsp;.&nbsp;.&nbsp;≡</br>≡(&nbsp;&nbsp;｡__ )≡</br>≡≡&#92;&nbsp&nbsp&nbsp&nbsp/≡≡≡<br>", //11
-                    ],
+                    ]
                     cuerpo: [
                         "⊂w▒▒▒▒▒wwつ<br>&nbsp&nbsp&nbsp▒▒▒&nbsp&nbsp",
                         "⊂=▒▒░▒▒==つ♡<br>&nbsp&nbsp&nbsp▒░▒&nbsp&nbsp",
