--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
         <div id="footer">
             v.1.0 - Esta es la primerísima versión - Se randomizan 11 caritas, con 4
             cuerpos y 4 pieses! <br />
-            Gracias por mirar - (◕&#x203f;◕)♡ ..
+            Gracias por mirar - (◕&#x203f;◕)♡♡♡ 
         </div>
     </div>
 
@@ -207,10 +207,11 @@
                         "&nbsp&nbsp&nbsp.©©©.</br>&nbsp&nbsp/&nbsp&nbsp&nbsp&nbsp:</br>&nbsp(&nbsp˘̩╭╮˘̩&nbsp)</br>&nbsp&nbsp&#92;&nbsp&nbsp&nbsp&nbsp/ .</br>", //triste - 7
                         "&nbsp&nbsp&nbsp....</br>&nbsp&nbsp/&nbsp&nbsp&nbsp&nbsp:</br>&nbsp(&nbsp▀̿Ĺ̯▀̿ ̿&nbsp)</br>&nbsp&nbsp|&nbsp&nbsp&nbsp&nbsp| .</br>", // serio - 8
                         "&nbsp&nbsp&nbsp§§§§.</br>&nbsp§§&nbsp&nbsp&nbsp&nbsp&#92;</br>§§&nbsp⌒◡⌒|</br>§§§&nbsp&nbsp&nbsp&nbsp/</br>", //feliz - 9
-                        //"&nbsp&nbsp&nbsp;»»»»,</br>&nbsp;&nbsp;«&nbsp;.&nbsp;   .</br>&nbsp(&nbsp;&nbsp;⸝⸝⸝⸝3⸝⸝⸝)  </br>&nbsp&nbsp&#92;&nbsp&nbsp&nbsp&nbsp/ <br>", //chuik - 10
-                        "&nbsp&nbsp&nbsp;»»»»,</br>&nbsp;&nbsp;«&nbsp;.&nbsp;   .</br>&nbsp(&nbsp;&nbsp;&#x2e1d;&#x2e1d;&#x2e1d;&#x2e1d;3&#x2e1d;&#x2e1d;&#x2e1d;)  </br>&nbsp&nbsp&#92;&nbsp&nbsp&nbsp&nbsp/ <br>", //chuik - 10
+                        "&nbsp&nbsp&nbsp;»»»»,</br>&nbsp;&nbsp;«&nbsp;.&nbsp;   .</br>&nbsp(&nbsp;&nbsp;⸝⸝⸝⸝3⸝⸝⸝)  </br>&nbsp&nbsp&#92;&nbsp&nbsp&nbsp&nbsp/ <br>", //chuik - 10
+                        "&nbsp&nbsp&nbsp;»»»»,</br>&nbsp;&nbsp;«&nbsp;.&nbsp;   .</br>&nbsp(&nbsp;&nbsp;⸝⸝⸝⸝3⸝⸝⸝)  </br>&nbsp&nbsp&#92;&nbsp&nbsp&nbsp&nbsp/ <br>", //chuik - 10
+
                         "&nbsp&nbsp.≡≡≡≡,</br>.≡≡&nbsp;.&nbsp;.&nbsp;≡</br>≡(&nbsp;&nbsp;｡__ )≡</br>≡≡&#92;&nbsp&nbsp&nbsp&nbsp/≡≡≡<br>", //11
-                    ]
+                    ],
                     cuerpo: [
                         "⊂w▒▒▒▒▒wwつ<br>&nbsp&nbsp&nbsp▒▒▒&nbsp&nbsp",
                         "⊂=▒▒░▒▒==つ♡<br>&nbsp&nbsp&nbsp▒░▒&nbsp&nbsp",
