--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </div>
 
         <div id="footer">
-            v.1.0 - Esta es la primerísima versión - Se randomizan 11 caritas, con 4
+            <a href="test.html"> v.1.0</a> - Esta es la primerísima versión - Se randomizan 11 caritas, con 4
             cuerpos y 4 pieses! <br />
             Gracias por mirar - (◕&#x203f;◕)♡♡♡ 
         </div>
