--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>.:Tamagotchi:.</title>
 
 
@@ -183,7 +183,7 @@
         <div id="footer">
             <a href="test.html"> v.1.0</a> - Esta es la primerísima versión - Se randomizan 11 caritas, con 4
             cuerpos y 4 pieses! <br />
-            Gracias por mirar - (◕&#x203f;◕)♡♡♡ 
+            Gracias por mirar - (◕&#x203f;◕)♡♡♡ (✦ ‿ ✦)
         </div>
     </div>
 
