--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <div id="footer">
             <a href="test.html"> v.1.0</a> - Esta es la primerísima versión - Se randomizan 11 caritas, con 4
             cuerpos y 4 pieses! <br />
-            Gracias por mirar - (◕&#x203f;◕)♡♡♡ (✦ ‿ ✦)
+            Gracias por mirar - (◕&#x203f;◕)♡  (✦ ‿ ✦)
         </div>
     </div>
 
