--- a/test2.html
+++ b/test2.html
@@ -21,7 +21,7 @@
         }
 
         h2 {
-            /*font-family: "Conv_Gridular-Regular", Sans-Serif;*/
+             font-family: "Conv_Gridular-Regular", Sans-Serif;
             font-weight: normal;
         }
 
@@ -123,7 +123,7 @@
                 margin-top: 160px;
             }
         }
-/* 
+
         @font-face {
             font-family: "Conv_Gridular-Regular";
             src: url("fonts/Gridular-Regular.eot");
@@ -134,7 +134,7 @@
             font-style: normal;
         }
 
-        @font-face {
+        /* @font-face {
             font-family: "lucon";
             src: url("fonts/lucon.woff") format("woff"),
                 url("fonts/lucon.woff2") format("woff2"),
