--- a/test2.html
+++ b/test2.html
@@ -11,8 +11,8 @@
     <style>
         /*corte 450px*/
         body {
-            /* font-family: "Lucida Console", monospace; 
-            font-family: "lucon", "Lucida Console", monospace;*/
+            /* font-family: "Lucida Console", monospace; */
+            font-family: "lucon", "Lucida Console", monospace;
             line-height: 1;
         }
 
