--- a/test2.html
+++ b/test2.html
@@ -12,7 +12,7 @@
         /*corte 450px*/
         body {
             /* font-family: "Lucida Console", monospace; */
-            font-family: "lucon", "Lucida Console", monospace;
+            /* font-family: "lucon", "Lucida Console", monospace; */
             line-height: 1;
         }
 
@@ -178,6 +178,7 @@
             <a href="test2.html"> v.1.0</a> - Esta es la primerísima versión - Se randomizan 11 caritas, con 4
             cuerpos y 4 pieses! <br />
             Gracias por mirar - (◕‿◕)♡  (✦ ‿ ✦)
+            <p style="font-family: 'lucon'">Gracias por mirar - (◕‿◕)♡  (✦ ‿ ✦)</p>
         </div>
     </div>
 
