--- a/test2.html
+++ b/test2.html
@@ -134,7 +134,7 @@
             font-style: normal;
         }
 
-        /* @font-face {
+        @font-face {
             font-family: "lucon";
             src: url("fonts/lucon.woff") format("woff"),
                 url("fonts/lucon.woff2") format("woff2"),
@@ -145,7 +145,7 @@
             font-weight: normal;
             font-style: normal;
             font-display: swap;
-        } */
+        }
     </style>
 </head>
 
@@ -177,7 +177,8 @@
         <div id="footer">
             <a href="test2.html"> v.1.0</a> - Esta es la primerísima versión - Se randomizan 11 caritas, con 4
             cuerpos y 4 pieses! <br />
-            Gracias por mirar - (◕‿◕)♡  (✦ ‿ ✦)
+            <p style="font-family: arial"> Gracias por mirar - (◕‿◕)♡  (✦ ‿ ✦)</p>
+            <p style="font-family: verdana"> Gracias por mirar - (◕‿◕)♡  (✦ ‿ ✦)</p>
             <p style="font-family: 'lucon'">Gracias por mirar - (◕‿◕)♡  (✦ ‿ ✦)</p>
         </div>
     </div>
@@ -203,8 +204,6 @@
                         "&nbsp&nbsp&nbsp....</br>&nbsp&nbsp/&nbsp&nbsp&nbsp&nbsp:</br>&nbsp(&nbsp▀̿Ĺ̯▀̿ ̿&nbsp)</br>&nbsp&nbsp|&nbsp&nbsp&nbsp&nbsp| .</br>", // serio - 8
                         "&nbsp&nbsp&nbsp§§§§.</br>&nbsp§§&nbsp&nbsp&nbsp&nbsp&#92;</br>§§&nbsp⌒◡⌒|</br>§§§&nbsp&nbsp&nbsp&nbsp/</br>", //feliz - 9
                         "&nbsp&nbsp&nbsp;»»»»,</br>&nbsp;&nbsp;«&nbsp;.&nbsp;   .</br>&nbsp(&nbsp;&nbsp;⸝⸝⸝⸝3⸝⸝⸝)  </br>&nbsp&nbsp&#92;&nbsp&nbsp&nbsp&nbsp/ <br>", //chuik - 10
-                        "&nbsp&nbsp&nbsp;»»»»,</br>&nbsp;&nbsp;«&nbsp;.&nbsp;   .</br>&nbsp(&nbsp;&nbsp;⸝⸝⸝⸝3⸝⸝⸝)  </br>&nbsp&nbsp&#92;&nbsp&nbsp&nbsp&nbsp/ <br>", //chuik - 10
-
                         "&nbsp&nbsp.≡≡≡≡,</br>.≡≡&nbsp;.&nbsp;.&nbsp;≡</br>≡(&nbsp;&nbsp;｡__ )≡</br>≡≡&#92;&nbsp&nbsp&nbsp&nbsp/≡≡≡<br>", //11
                     ],
                     cuerpo: [
