--- a/test2.html
+++ b/test2.html
@@ -162,7 +162,7 @@
                 </button>
             </div>
             <div id="ladoB">
-                <div id="tamagotchi" ref="tamagotchi">
+                <div id="tamagotchi" ref="tamagotchi" style="font-family: 'lucon'">
                     <div v-html="chosenRostro"></div>
                     <div v-html="chosenCuerpo"></div>
                     <div v-html="chosenPies"></div>
@@ -179,7 +179,7 @@
             cuerpos y 4 pieses! <br />
             <p style="font-family: arial"> Gracias por mirar - (◕‿◕)♡  (✦ ‿ ✦)</p>
             <p style="font-family: verdana"> Gracias por mirar - (◕‿◕)♡  (✦ ‿ ✦)</p>
-            <p style="font-family: 'lucon'">Gracias por mirar - (◕‿◕)♡  (✦ ‿ ✦)</p>
+            <p style="font-family: 'lucon'">Gracias por mirar - (◕‿◕)♡  (✦ ‿ ✦) aaa</p>
         </div>
     </div>
 
