--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 </button>
             </div>
             <div id="ladoB">
-                <div id="tamagotchi" ref="tamagotchi">
+                <div id="tamagotchi" ref="tamagotchi" style="font-family: 'lucon'">
                     <div v-html="chosenRostro"></div>
                     <div v-html="chosenCuerpo"></div>
                     <div v-html="chosenPies"></div>
@@ -183,7 +183,7 @@
         <div id="footer">
             <a href="test2.html"> v.1.4</a> - Esta es la primerísima versión - Se randomizan 11 caritas, con 4
             cuerpos y 4 pieses! <br />
-            Gracias por mirar - (◕‿◕)♡  (✦ ‿ ✦)
+            Gracias por mirar - (◕‿◕)♡ 
         </div>
     </div>
 
