--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>.:Tamagotchi:.</title>
 
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet"> 
-
-
     <style>
         /*corte 450px*/
         body {
@@ -124,7 +118,7 @@
             margin: 0 auto;
             font-size: 12px;
             margin-top: 100px;
-            font-family: 'Roboto Mono', monospace;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
             @media only screen and (max-width: 450px) {
                 margin-top: 160px;
             }
